layout quase pronto

--- a/index.html
+++ b/index.html
@@ -7,38 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofólio Lucas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div id="div-apresentacao">
         <h1>Lucas Fernandes Portella</h1>
-        <img src="cut.jpg" alt="foto de Lucas Portella" width="150 px">
-        <p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito na
+        <h3>Estudante dev full stack na Trybe</h3>
+        <img class="foto-lucas" src="cut2.jpg" alt="foto de Lucas Portella" >
+        <div id="texto"><p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito na
             PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em informática. Hoje
-            dedica-se ao desenvolvimento web.</p>
+            dedica-se ao desenvolvimento web.</p></div>
     </div>
-
+    <hr>
     <div id="div-habilidades">
         <h4>Habilidades</h4>
-        <ul>
-            <li><strong>Linux</strong></li>
-            <li>Git/GitHub</li>
+        <img class="engrenagem"src="engrenagem.png" alt="engrenagem">
+        <ul class="ul-1">
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
+        </ul>
+        <ul class="ul-2">
+            <li>Linux</li>
+            <li>Git/GitHub</li>
             <li>Python</li>
         </ul>
     </div>
-
+    <hr>
     <div id="div-outras-infos">
-        <p><strong>Contato</strong></p>
-        <p>
+        <p class="contato">Contato</p>
+        <p class="email">
         lucasportellaagu@gmail.com
-        <br>
-        <a href="https://www.linkedin.com/in/lucas-fernandes-portella/" target="_blank">Linkedin</a>
-        <br>
-        <a href="https://github.com/lucasportella">Github</a>
+        <a class="linkedin" href="https://www.linkedin.com/in/lucas-fernandes-portella/" target="_blank">Linkedin</a>
+        <a class="github" href="https://github.com/lucasportella">Github</a>
     </p>
     </div>
 
