--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="div-apresentacao">
         <h1>Lucas Fernandes Portella</h1>
         <h3>Estudante dev full stack na Trybe</h3>
-        <img class="foto-lucas" src="cut2.jpg" alt="foto de Lucas Portella" >
+        <img class="img-lucas" src="images/cut2.jpg" alt="foto de Lucas Portella" >
         <div id="texto"><p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito na
             PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em informática. Hoje
             dedica-se ao desenvolvimento web.</p></div>
@@ -24,7 +24,7 @@
     <hr>
     <div id="div-habilidades">
         <h4>Habilidades</h4>
-        <img class="engrenagem"src="engrenagem.png" alt="engrenagem">
+        <img class="img-engrenagem"src="images/engrenagem.png" alt="engrenagem">
         <ul class="ul-1">
             <li>HTML</li>
             <li>CSS</li>
