images resized + html

--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
     <title>Portofólio Lucas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div id="div-apresentacao">
-        <h1>Lucas Fernandes Portella</h1>
-        <h3>Estudante dev full stack na Trybe</h3>
-        <img class="img-lucas" src="images/cut2.jpg" alt="foto de Lucas Portella" >
-        <div id="texto"><p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito na
-            PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em informática. Hoje
-            dedica-se ao desenvolvimento web.</p></div>
+        <img class="img-lucas" src="images/cut2.jpg" alt="foto de Lucas Portella">
+        <div class="div-texto-apresentacao">
+            <h1>Lucas Fernandes Portella</h1>
+            <h3>Estudante dev full stack na Trybe</h3>
+            <p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito
+                na
+                PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em informática.
+                Hoje
+                dedica-se ao desenvolvimento web.</p>
+        </div>
     </div>
+
     <hr>
+
     <div id="div-habilidades">
         <h4>Habilidades</h4>
-        <img class="img-engrenagem"src="images/engrenagem.png" alt="engrenagem">
+        <img class="img-engrenagem" src="images/engrenagem.png" alt="engrenagem">
         <ul class="ul-1">
             <li>HTML</li>
             <li>CSS</li>
@@ -36,15 +42,36 @@
             <li>Python</li>
         </ul>
     </div>
+
     <hr>
+
     <div id="div-outras-infos">
+
         <p class="contato">Contato</p>
-        <p class="email">
-        lucasportellaagu@gmail.com
-        <a class="linkedin" href="https://www.linkedin.com/in/lucas-fernandes-portella/" target="_blank">Linkedin</a>
-        <a class="github" href="https://github.com/lucasportella">Github</a>
-    </p>
+
+        <div class="div-whatsapp">
+            <p>(51) 9-8429-7499</p>
+            <img class="img-whatsapp" src="images/whatsapp.png" alt="logo whatsapp">
+        </div>
+
+        <div class="div-email">
+            <p class="email">lucasportellaagu@gmail.com</p>
+            <img class="img-gmail" src="images/gmail.png" alt="logo gmail">
+        </div>
+
+        <div class="div-linkedin">
+            <a class="a-linkedin" href="https://www.linkedin.com/in/lucas-fernandes-portella/"
+                target="_blank">Linkedin</a>
+            <img class="img-linkeding" src="images/linkedin.png" alt="logo linkedin">
+        </div>
+
+        <div class="div-github">
+            <a class="a-github" href="https://github.com/lucasportella">Github</a>
+            <img class="img-github" src="images/github.png" alt="logo github">
+        </div>
+
     </div>
 
 </body>
+
 </html>
