ajustes div-apresentacao

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
         <div class="div-texto-apresentacao">
             <h1>Lucas Fernandes Portella</h1>
             <h3>Estudante dev full stack na Trybe</h3>
-            <p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito
+            <p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em
+                Direito
                 na
-                PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em informática.
+                PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em
+                informática.
                 Hoje
                 dedica-se ao desenvolvimento web.</p>
         </div>
     </div>
+
 
     <hr>
 
