apresentacao e habilidades pronto, outras infos ja ta separada por 2 divs

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 
     <div id="div-habilidades">
         <h4>Habilidades</h4>
-        <img class="img-engrenagem" src="images/engrenagem.png" alt="engrenagem">
-        <ul class="ul-1">
+        <ul class="ul">
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
         </ul>
-        <ul class="ul-2">
+        <ul class="ul">
             <li>Linux</li>
             <li>Git/GitHub</li>
             <li>Python</li>
         </ul>
+        <img class="img-engrenagem" src="images/engrenagem.png" alt="engrenagem">
     </div>
 
     <hr>
@@ -52,25 +52,29 @@
 
         <p class="contato">Contato</p>
 
-        <div class="div-whatsapp">
-            <p>(51) 9-8429-7499</p>
-            <img class="img-whatsapp" src="images/whatsapp.png" alt="logo whatsapp">
+        <div class="div-whats-e-email">
+            <div class="div-whatsapp">
+                <p>(51) 9-8429-7499</p>
+                <img class="img-whatsapp" src="images/whatsapp.png" alt="logo whatsapp">
+            </div>
+    
+            <div class="div-email">
+                <p class="email">lucasportellaagu@gmail.com</p>
+                <img class="img-gmail" src="images/gmail.png" alt="logo gmail">
+            </div>
         </div>
 
-        <div class="div-email">
-            <p class="email">lucasportellaagu@gmail.com</p>
-            <img class="img-gmail" src="images/gmail.png" alt="logo gmail">
-        </div>
-
-        <div class="div-linkedin">
-            <a class="a-linkedin" href="https://www.linkedin.com/in/lucas-fernandes-portella/"
-                target="_blank">Linkedin</a>
-            <img class="img-linkeding" src="images/linkedin.png" alt="logo linkedin">
-        </div>
-
-        <div class="div-github">
-            <a class="a-github" href="https://github.com/lucasportella">Github</a>
-            <img class="img-github" src="images/github.png" alt="logo github">
+        <div class="div-linkedin-e-github">
+            <div class="div-linkedin">
+                <a class="a-linkedin" href="https://www.linkedin.com/in/lucas-fernandes-portella/"
+                    target="_blank">Linkedin</a>
+                <img class="img-linkeding" src="images/linkedin.png" alt="logo linkedin">
+            </div>
+    
+            <div class="div-github">
+                <a class="a-github" href="https://github.com/lucasportella">Github</a>
+                <img class="img-github" src="images/github.png" alt="logo github">
+            </div>
         </div>
 
     </div>
