div-whats-e-gmail e div-linkedin-e-github com width 50% funcionando

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="div-linkedin">
                 <a class="a-linkedin" href="https://www.linkedin.com/in/lucas-fernandes-portella/"
                     target="_blank">Linkedin</a>
-                <img class="img-linkeding" src="images/linkedin.png" alt="logo linkedin">
+                <img class="img-linkedin" src="images/linkedin.png" alt="logo linkedin">
             </div>
     
             <div class="div-github">
