--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             </div>
         </div>
 
+<div class="divide"></div>
+
         <div class="div-email-e-github">
                 <div class="div-email">
                     <img class="img-gmail" src="images/gmail.png" alt="logo gmail">
