--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -13,23 +13,23 @@
 
 <body>
 
-    <div id="div-apresentacao">
-        <img class="img-lucas" src="images/cut2.jpg" alt="foto de Lucas Portella">
+    <section id="section-apresentacao">
+        <!-- <img class="img-lucas" src="images/cut2.jpg" alt="foto de Lucas Portella"> -->
         <div class="div-texto-apresentacao">
             <h1>Lucas Fernandes Portella</h1>
             <h3>Estudante dev full stack na Trybe</h3>
             <p>Brasileiro, nascido em <strong>Porto Alegre/RS</strong>, cidade que mora até hoje. Formou-se em Direito a PUCRS, atuou como advogado e professor de Muay Thai. Além disso, sempre teve interesse em informática. Hoje dedica-se ao desenvolvimento web.</p>
         </div>
 
-    </div>
+    </section>
 
 
 
-    <hr>
+    <!-- <hr> -->
 
 
 
-    <div id="div-habilidades">
+    <!-- <section id="section-habilidades">
         <h4>Habilidades</h4>
         <ul class="ul">
             <li>HTML</li>
@@ -42,7 +42,7 @@
             <li>Python</li>
         </ul>
         <img class="img-engrenagem" src="images/engrenagem.png" alt="engrenagem">
-    </div>
+    </section>
 
 
 
@@ -50,7 +50,7 @@
 
 
 
-    <div id="div-outras-infos">
+    <section id="section-outras-infos">
 
         <h4 class="contato">Contato</h4>
 
@@ -80,7 +80,7 @@
                 <a class="a-github" href="https://github.com/lucasportella" target="_blank">Github</a>
             </div>
             </div>
-        </div>
+        </section> -->
 
 
 </body>
